# MEMROC

./: .gitignore  CMakeLists.txt  README.md
include/: CalibrationInfo.h  Calibrator.h  CameraInfo.h  Detector.h  Metrics.h  MobileHandEyeCalibrator.h  MultiHandEyeCalibrator.h  MultiView.h  PinholeCameraModel.h  Reader.h  SingleHandEyeCalibrator.h  display_utils.h  handeye_calibrator.h  utils.h
src/: CalibrationInfo.cpp  Calibrator.cpp  CameraInfo.cpp  Detector.cpp  Metrics.cpp  MobileHandEyeCalibrator.cpp  MultiHandEyeCalibrator.cpp  MultiView.cpp  PinholeCameraModel.cpp  Reader.cpp  SingleHandEyeCalibrator.cpp  display_utils.cpp  main.cpp  utils.cpp
